--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -21,4 +21,15 @@ spec:
   syncPolicy:
     syncOptions:
       - CreateNamespace=true  
-   
+  ignoreDifferences:
+    - group: ""
+      kind: Service
+      name: dev-cloud-frontend-caster
+      jqPathExpressions:
+        - '.metadata.annotations."creation"'
+    - group: ""
+      kind: Secret
+      name: example-secret
+      jsonPointers:
+      - /data/my-username
+      - /data/my-password
